création du Hero Header

--- a/themes/keep-moving/sass/style.scss
+++ b/themes/keep-moving/sass/style.scss
@@ -1,5 +1,6 @@
 // Importation des fichiers SCSS
 @import "./composants/_header.scss";
+@import "./composants/_hero.scss";
 
 //Style spécifique général
 
