--- a/themes/keep-moving/sass/composants/_header.scss
+++ b/themes/keep-moving/sass/composants/_header.scss
@@ -9,7 +9,7 @@ header {
 
   .header-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     width: 100%;
     max-width: 1200px;
@@ -19,7 +19,7 @@ header {
       a {
         display: block;
         img {
-          max-height: 50px;
+          max-height: 100px;
         }
       }
     }
@@ -30,9 +30,13 @@ header {
         margin: 0;
         padding: 0;
         display: flex;
-
+        ul {
+          display: flex;
+        }
         li {
           margin: 0 15px;
+          list-style-type: none;
+          display: flex;
 
           a {
             color: #fff;
@@ -42,11 +46,25 @@ header {
             transition: color 0.3s;
 
             &:hover {
-              color: #f0f0f0;
+              color: #ca32ca;
             }
           }
         }
       }
     }
+  }
+}
+//Style footer
+
+footer {
+  background-color: #333; /* Couleur de fond du footer */
+  color: #fff; /* Couleur du texte */
+  padding: 20px 0;
+  text-align: center; /* Centrer le texte */
+
+  p {
+    margin: 0;
+    font-size: 14px;
+    font-family: "Roboto", sans-serif; /* Police pour le texte du footer */
   }
 }
