--- a/themes/keep-moving/sass/style.css
+++ b/themes/keep-moving/sass/style.css
@@ -10,7 +10,7 @@ header {
 }
 header .header-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   width: 100%;
   max-width: 1200px;
@@ -20,7 +20,7 @@ header .header-container .logo a {
   display: block;
 }
 header .header-container .logo a img {
-  max-height: 50px;
+  max-height: 100px;
 }
 header .header-container nav .nav-menu {
   list-style: none;
@@ -28,8 +28,13 @@ header .header-container nav .nav-menu {
   padding: 0;
   display: flex;
 }
+header .header-container nav .nav-menu ul {
+  display: flex;
+}
 header .header-container nav .nav-menu li {
   margin: 0 15px;
+  list-style-type: none;
+  display: flex;
 }
 header .header-container nav .nav-menu li a {
   color: #fff;
@@ -39,7 +44,66 @@ header .header-container nav .nav-menu li a {
   transition: color 0.3s;
 }
 header .header-container nav .nav-menu li a:hover {
-  color: #f0f0f0;
+  color: #ca32ca;
+}
+
+footer {
+  background-color: #333; /* Couleur de fond du footer */
+  color: #fff; /* Couleur du texte */
+  padding: 20px 0;
+  text-align: center; /* Centrer le texte */
+}
+footer p {
+  margin: 0;
+  font-size: 14px;
+  font-family: "Roboto", sans-serif; /* Police pour le texte du footer */
+}
+
+.hero {
+  position: relative;
+  background-color: #000; /* Fond noir pour la section */
+}
+.hero #hero-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 0;
+}
+.hero .hero-content {
+  position: relative;
+  z-index: 1; /* Le contenu est au-dessus de la vidéo */
+  color: #fff; /* Texte blanc pour contraster avec le fond */
+  text-align: center;
+  padding: 100px 20px;
+}
+.hero .hero-content h1 {
+  font-size: 48px;
+  background: linear-gradient(90deg, #8e44ad, #3498db); /* Gradient violet */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.hero .hero-content p {
+  font-size: 24px;
+  margin: 20px 0;
+  font-family: "Roboto", sans-serif;
+}
+.hero .hero-content .btn-primary {
+  display: inline-block;
+  padding: 15px 30px;
+  background-color: #8e44ad; /* Bouton violet */
+  color: #fff;
+  text-decoration: none;
+  font-size: 18px;
+  font-family: "Bebas Neue", sans-serif;
+  text-transform: uppercase;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+.hero .hero-content .btn-primary:hover {
+  background-color: #3498db; /* Changement de couleur au survol */
 }
 
 body {
@@ -54,4 +118,4 @@ h5,
 h6 {
   font-family: "Bebas Neue", sans-serif;
   letter-spacing: 1px;
-}/*# sourceMappingURL=style.css.map */
+} /*# sourceMappingURL=style.css.map */
